[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/stone.png" type="Texture" id=1]
[ext_resource path="res://scenes/PlatformBlue2.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=2]
rough = true

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 34, 30.5 )

[node name="PlatformBlue2" type="StaticBody2D"]
physics_material_override = SubResource( 2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="raycastR" type="Node2D" parent="."]

[node name="RayCast2D3" type="RayCast2D" parent="raycastR"]
position = Vector2( 0, -32 )
enabled = true
cast_to = Vector2( 42, 0 )

[node name="RayCast2D2" type="RayCast2D" parent="raycastR"]
position = Vector2( 0, 32 )
enabled = true
cast_to = Vector2( 42, 0 )

[node name="RayCast2D" type="RayCast2D" parent="raycastR"]
cast_to = Vector2( 44, 0 )

[node name="raycastL" type="Node2D" parent="."]

[node name="RayCast2D3" type="RayCast2D" parent="raycastL"]
position = Vector2( 0, -32 )
enabled = true
cast_to = Vector2( -42, 0 )

[node name="RayCast2D2" type="RayCast2D" parent="raycastL"]
position = Vector2( 0, 32 )
enabled = true
cast_to = Vector2( -42, 0 )

[node name="RayCast2D" type="RayCast2D" parent="raycastL"]
cast_to = Vector2( -44, 0 )

[node name="raycastD" type="Node2D" parent="."]
position = Vector2( 0, 22 )

[node name="RayCast2D" type="RayCast2D" parent="raycastD"]
position = Vector2( 0, 9 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="RayCast2D2" type="RayCast2D" parent="raycastD"]
position = Vector2( -32, 9 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="RayCast2D3" type="RayCast2D" parent="raycastD"]
position = Vector2( 32, 9 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="raycastU" type="Node2D" parent="."]
position = Vector2( 0, -40 )

[node name="RayCast2D" type="RayCast2D" parent="raycastU"]
position = Vector2( 0, 9 )
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 20 )

[node name="RayCast2D2" type="RayCast2D" parent="raycastU"]
position = Vector2( -32, 9 )
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 20 )

[node name="RayCast2D3" type="RayCast2D" parent="raycastU"]
position = Vector2( 32, 9 )
rotation = 3.14159
enabled = true
cast_to = Vector2( 0, 20 )
